--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,11 @@
             crossorigin="anonymous"
     />
     <title>ECommerce</title>
+
+    <!-- Favicon links -->
+    <link rel="icon" href="logo.png" type="image/png" />
+    <link rel="shortcut icon" href="logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="logo.png" type="image/png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
